Add billing_controller and IT
